docs updated & close cart
