# app/Http/Controllers/Api/AuthController.php
@@ -65,10 +65,6 @@ class AuthController extends Controller
      * Check that the service is up. If everything is okay, you'll get a 200 OK response.
      *
      * Otherwise, the request will fail with a 400 error, and a response listing the failed services.
-     *
-     * @response 400 scenario="Service is unhealthy" {"status": "down", "services": {"database": "up", "redis": "down"}}
-     * @responseField status The status of this API (`up` or `down`).
-     * @responseField services Map of each downstream service and their status (`up` or `down`).
      */
     public function login(LoginRequest $request) {
         $data = $request->validated();
