# public/docs/openapi.yaml
@@ -13,32 +13,7 @@ paths:
       operationId: login
       description: "Check that the service is up. If everything is okay, you'll get a 200 OK response.\n\nOtherwise, the request will fail with a 400 error, and a response listing the failed services."
       parameters: []
-      responses:
-        400:
-          description: 'Service is unhealthy'
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: down
-                  services:
-                    database: up
-                    redis: down
-                properties:
-                  status:
-                    type: string
-                    example: down
-                    description: 'The status of this API (`up` or `down`).'
-                  services:
-                    type: object
-                    properties:
-                      database:
-                        type: string
-                        example: up
-                      redis:
-                        type: string
-                        example: down
+      responses: {  }
       tags:
         - 'Auth management'
       requestBody:
@@ -51,19 +26,154 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: dolorem
+                  example: non
                 password:
                   type: string
                   description: ''
-                  example: hic
+                  example: aut
               required:
                 - email
                 - password
       security: []
+  /api/cart:
+    post:
+      summary: 'New cart'
+      operationId: newCart
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Cart management'
+      security: []
+  '/api/cart/{token}':
+    get:
+      summary: 'Show Cart / Checkout information'
+      operationId: showCartCheckoutInformation
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    token: 0b3c9250-06e8-487f-bc6d-7b4a67f830cb
+                    products_quantity: 2
+                    total: 16.59
+                    products:
+                      -
+                        id: 2
+                        name: 'Sample Product 2'
+                        quantity: '1.00'
+                        total: 15.99
+                      -
+                        id: 3
+                        name: 'Sample Product 22'
+                        quantity: '0.10'
+                        total: 4.99
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      token:
+                        type: string
+                        example: 0b3c9250-06e8-487f-bc6d-7b4a67f830cb
+                      products_quantity:
+                        type: integer
+                        example: 2
+                      total:
+                        type: number
+                        example: 16.59
+                      products:
+                        type: array
+                        example:
+                          -
+                            id: 2
+                            name: 'Sample Product 2'
+                            quantity: '1.00'
+                            total: 15.99
+                          -
+                            id: 3
+                            name: 'Sample Product 22'
+                            quantity: '0.10'
+                            total: 4.99
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              example: 2
+                            name:
+                              type: string
+                              example: 'Sample Product 2'
+                            quantity:
+                              type: string
+                              example: '1.00'
+                            total:
+                              type: number
+                              example: 15.99
+      tags:
+        - 'Cart management'
+      security: []
+    parameters:
+      -
+        in: path
+        name: token
+        description: ''
+        example: 0b3c9250-06e8-487f-bc6d-7b4a67f830cb
+        required: true
+        schema:
+          type: string
+  /api/cart/add-product:
+    post:
+      summary: 'Add Product'
+      operationId: addProduct
+      description: 'Add a product to cart.'
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Cart management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_id:
+                  type: integer
+                  description: ''
+                  example: 14
+                quantity:
+                  type: number
+                  description: ''
+                  example: 1.53273
+                is_unit:
+                  type: boolean
+                  description: ''
+                  example: true
+              required:
+                - product_id
+                - quantity
+                - is_unit
+      security: []
+  /api/cart/close-cart:
+    post:
+      summary: 'Close Cart'
+      operationId: closeCart
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Cart management'
+      security: []
   /api/category:
     get:
-      summary: 'Display a listing of the resource.'
-      operationId: displayAListingOfTheResource
+      summary: 'List Categories'
+      operationId: listCategories
       description: ''
       parameters: []
       responses:
@@ -129,13 +239,13 @@ paths:
                           type: string
                           example: Condimentos
       tags:
-        - Endpoints
+        - 'Category management'
       security: []
   /api/product:
     get:
-      summary: 'Display a listing of the resource.'
-      operationId: displayAListingOfTheResource
-      description: ''
+      summary: 'List products'
+      operationId: listProducts
+      description: 'List products with pagination'
       parameters: []
       responses:
         500:
@@ -151,7 +261,7 @@ paths:
                     type: string
                     example: 'Server Error'
       tags:
-        - Endpoints
+        - 'Product management'
       requestBody:
         required: false
         content:
@@ -162,16 +272,16 @@ paths:
                 category_id:
                   type: string
                   description: ''
-                  example: itaque
+                  example: nam
       security: []
     post:
-      summary: 'Store a newly created resource in storage.'
-      operationId: storeANewlyCreatedResourceInStorage
+      summary: 'Create Product'
+      operationId: createProduct
       description: ''
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - 'Product management'
       requestBody:
         required: true
         content:
@@ -182,15 +292,15 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: nu
+                  example: fot
                 description:
                   type: string
                   description: ''
-                  example: 'Sequi voluptatem non sit sed est saepe.'
+                  example: 'Qui facere et harum quo accusamus officiis et.'
                 image:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: egrwhjzdolxdvfxudvfrjqlmw
+                  example: jyestftspzqmcokcxflulpsku
                 unit_availability:
                   type: boolean
                   description: ''
@@ -198,35 +308,35 @@ paths:
                 unit_price:
                   type: number
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must be at least 0.'
-                  example: 42
+                  example: 13
                 unit_discount_quantity:
                   type: integer
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must be at least 1.'
-                  example: 68
+                  example: 6
                 unit_discount_price:
                   type: number
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must be at least 0.'
-                  example: 47
+                  example: 67
                 weight_availability:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                 weight_price:
                   type: number
                   description: 'This field is required when <code>weight_availability</code> is <code>true</code>. Must be at least 0.'
-                  example: 22
+                  example: 4
                 weight_discount_quantity:
                   type: integer
                   description: 'This field is required when <code>weight_availability</code> is <code>true</code>. Must be at least 1.'
-                  example: 11
+                  example: 79
                 weight_discount_price:
                   type: number
                   description: 'This field is required when <code>weight_availability</code> is <code>true</code>. Must be at least 0.'
-                  example: 35
+                  example: 21
                 unit_name:
                   type: string
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must not be greater than 255 characters.'
-                  example: jzkmtedxuolx
+                  example: rlrtwsdh
                 is_available:
                   type: boolean
                   description: ''
@@ -234,7 +344,7 @@ paths:
                 category_id:
                   type: string
                   description: ''
-                  example: quos
+                  example: distinctio
               required:
                 - name
                 - image
@@ -245,8 +355,8 @@ paths:
       security: []
   '/api/product/{id}':
     get:
-      summary: 'Display the specified resource.'
-      operationId: displayTheSpecifiedResource
+      summary: 'Show Product'
+      operationId: showProduct
       description: ''
       parameters: []
       responses:
@@ -359,16 +469,16 @@ paths:
                             type: string
                             example: null
       tags:
-        - Endpoints
+        - 'Product management'
       security: []
     put:
-      summary: 'Update the specified resource in storage.'
-      operationId: updateTheSpecifiedResourceInStorage
+      summary: 'Update Product'
+      operationId: updateProduct
       description: ''
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - 'Product management'
       requestBody:
         required: true
         content:
@@ -379,15 +489,15 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: oirfmxgmsrwcd
+                  example: mcxgpxjjek
                 description:
                   type: string
                   description: ''
-                  example: 'Minus rem cumque quo dolor inventore cupiditate rerum in.'
+                  example: 'Delectus aut placeat minus beatae.'
                 image:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: ppxuyxmwjqyaz
+                  example: mdoryleuertvpziynta
                 unit_availability:
                   type: boolean
                   description: ''
@@ -395,11 +505,11 @@ paths:
                 unit_price:
                   type: number
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must be at least 0.'
-                  example: 1
+                  example: 56
                 unit_discount_quantity:
                   type: integer
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must be at least 1.'
-                  example: 74
+                  example: 60
                 unit_discount_price:
                   type: number
                   description: 'This field is required when <code>unit_availability</code> is <code>true</code>. Must be at least 0.'
@@ -411,11 +521,11 @@ paths:
                 weight_price:
                   type: number
                   description: 'This field is required when <code>weight_availability</code> is <code>true</code>. Must be at least 0.'
-                  example: 86
+                  example: 68
                 weight_discount_quantity:
                   type: integer
                   description: 'This field is required when <code>weight_availability</code> is <code>true</code>. Must be at least 1.'
-                  example: 73
+                  example: 60
                 weight_discount_price:
                   type: number
                   description: 'This field is required when <code>weight_availability</code> is <code>true</code>. Must be at least 0.'
@@ -423,7 +533,7 @@ paths:
                 unit_name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: efyhvslbkzr
+                  example: ihop
                 category_id:
                   type: string
                   description: ''
@@ -433,13 +543,13 @@ paths:
                 - weight_availability
       security: []
     delete:
-      summary: 'Remove the specified resource from storage.'
-      operationId: removeTheSpecifiedResourceFromStorage
+      summary: 'Delete Product'
+      operationId: deleteProduct
       description: ''
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - 'Product management'
       security: []
     parameters:
       -
@@ -450,152 +560,16 @@ paths:
         required: true
         schema:
           type: integer
-  /api/cart:
-    post:
-      summary: 'Store a newly created resource in storage.'
-      operationId: storeANewlyCreatedResourceInStorage
-      description: ''
-      parameters: []
-      responses: {  }
-      tags:
-        - Endpoints
-      security: []
-  '/api/cart/{token}':
-    get:
-      summary: 'Display the specified resource.'
-      operationId: displayTheSpecifiedResource
-      description: ''
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  data:
-                    token: 0b3c9250-06e8-487f-bc6d-7b4a67f830cb
-                    products_quantity: 2
-                    total: 20.98
-                    products:
-                      -
-                        id: 2
-                        name: 'Sample Product 2'
-                        quantity: '1.00'
-                        total: 15.99
-                      -
-                        id: 3
-                        name: 'Sample Product 22'
-                        quantity: '1.00'
-                        total: 4.99
-                properties:
-                  data:
-                    type: object
-                    properties:
-                      token:
-                        type: string
-                        example: 0b3c9250-06e8-487f-bc6d-7b4a67f830cb
-                      products_quantity:
-                        type: integer
-                        example: 2
-                      total:
-                        type: number
-                        example: 20.98
-                      products:
-                        type: array
-                        example:
-                          -
-                            id: 2
-                            name: 'Sample Product 2'
-                            quantity: '1.00'
-                            total: 15.99
-                          -
-                            id: 3
-                            name: 'Sample Product 22'
-                            quantity: '1.00'
-                            total: 4.99
-                        items:
-                          type: object
-                          properties:
-                            id:
-                              type: integer
-                              example: 2
-                            name:
-                              type: string
-                              example: 'Sample Product 2'
-                            quantity:
-                              type: string
-                              example: '1.00'
-                            total:
-                              type: number
-                              example: 15.99
-      tags:
-        - Endpoints
-      security: []
-    parameters:
-      -
-        in: path
-        name: token
-        description: ''
-        example: 0b3c9250-06e8-487f-bc6d-7b4a67f830cb
-        required: true
-        schema:
-          type: string
-  /api/cart/add-product:
-    post:
-      summary: ''
-      operationId: postApiCartAddProduct
-      description: ''
-      parameters: []
-      responses: {  }
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                product_id:
-                  type: integer
-                  description: ''
-                  example: 19
-                quantity:
-                  type: number
-                  description: ''
-                  example: 18174.9696
-                is_unit:
-                  type: boolean
-                  description: ''
-                  example: false
-              required:
-                - product_id
-                - quantity
-                - is_unit
-      security: []
-  /api/test:
-    get:
-      summary: ''
-      operationId: getApiTest
-      description: ''
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: ''
-      tags:
-        - Endpoints
-      security: []
 tags:
   -
     name: 'Auth management'
     description: "\nAPIs for managing auth"
   -
-    name: Endpoints
-    description: ''
+    name: 'Cart management'
+    description: "\nAPIs for managing cart"
+  -
+    name: 'Category management'
+    description: "\nAPIs for managing category"
+  -
+    name: 'Product management'
+    description: "\nAPIs for managing product"
